bin_PROGRAMS = \
	playhevc \
	timehevc

playhevc_SOURCES = playhevc.c
playhevc_CFLAGS = \
	$(GST_CFLAGS)
playhevc_LDFLAGS = \
	$(GST_LDFLAGS) \
	$(GST_LIBS)

timehevc_SOURCES = timehevc.c
timehevc_CFLAGS = \
	$(GST_CFLAGS)
timehevc_LDFLAGS = \
	$(GST_LDFLAGS) \
	$(GST_LIBS)

EXTRA_DIST = \
	spreedmovie.mkv
